fixed datetopbar not showing

--- a/css/main_section.css
+++ b/css/main_section.css
@@ -197,7 +197,7 @@
 @media only screen and (max-width: 900px) {
 
     #contactIcon{
-        width: 7vh;
+        width: 8vh;
         top: 12vh;
         left: 20vw;
     }
